height map wave and caustics

--- a/imgui.ini
+++ b/imgui.ini
@@ -33,3 +33,13 @@ Pos=60,60
 Size=152,54
 Collapsed=0
 
+[Window][Window A]
+Pos=60,60
+Size=274,98
+Collapsed=0
+
+[Window][Water Surface]
+Pos=589,65
+Size=406,226
+Collapsed=0
+
