fix water surface refraction

--- a/imgui.ini
+++ b/imgui.ini
@@ -39,7 +39,12 @@ Size=274,98
 Collapsed=0
 
 [Window][Water Surface]
-Pos=445,25
-Size=590,379
+Pos=608,25
+Size=427,221
+Collapsed=0
+
+[Window][Water Simulation]
+Pos=60,60
+Size=559,235
 Collapsed=0
 
